urpc/internal/core/analysis/testdata/errors/duplicates/type_enum_same_name.ufo
// @expect: E805
// Type and enum share the same name

type User {
	id: string
}

enum User {
	Active
	Inactive
}
